--- a/peermountain_sdk/src/main/res/layout/pm_job_tinder_card_view.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_job_tinder_card_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -36,5 +37,5 @@
         android:id="@+id/pmIvDoJob"
         style="@style/pm_square_btn"
         android:rotation="180"
-        android:src="@drawable/pm_ic_arrow_back_24dp"/>
+        app:srcCompat="@drawable/pm_ic_arrow_back_24dp"/>
 </LinearLayout>
