--- a/peermountain_sdk/src/main/res/layout/fragment_profile_settings.xml
+++ b/peermountain_sdk/src/main/res/layout/fragment_profile_settings.xml
@@ -38,6 +38,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:shadowDx="3"
+            android:shadowDy="5"
+            android:shadowRadius="10"
             android:padding="@dimen/pm_margin_normal"
             android:text="@string/pm_tab_profile_social"
             android:textColor="@color/pm_tab_text_inactive"
