--- a/peermountain_sdk/src/main/res/layout/pm_activity_login.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/flContainer"
-        android:layout_marginTop="@dimen/pm_toolbar_size">
+        android:layout_marginTop="@dimen/pm_toolbar_height">
 
     </FrameLayout>
 </FrameLayout>
