--- a/peermountain_sdk/src/main/res/layout/pm_fragment_menu.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_menu.xml
@@ -7,7 +7,7 @@
               android:orientation="vertical"
               android:padding="@dimen/pm_margin_normal"
               tools:background="@drawable/pm_bkg"
-              tools:context="com.peermountain.sdk.ui.authorized.MenuFragment"
+              tools:context="com.peermountain.sdk.ui.authorized.menu.MenuFragment"
               tools:showIn="@layout/pm_activity_home">
 
     <LinearLayout
