--- a/peermountain_sdk/src/main/res/layout/pm_fragment_scan_id.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_scan_id.xml
@@ -2,6 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:background="@drawable/pm_bkg"
              tools:context="com.peermountain.sdk.ui.register.ScanIdFragment">
 
@@ -96,7 +97,7 @@
                 android:id="@+id/pmIvNext"
                 style="@style/pm_square_btn"
                 android:rotation="180"
-                android:src="@drawable/pm_ic_arrow_back_24dp"/>
+                app:srcCompat="@drawable/pm_ic_arrow_back_24dp"/>
         </LinearLayout>
 
 
