--- a/peermountain_sdk/src/main/res/layout/pm_fragment_profile_settings.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_profile_settings.xml
@@ -19,32 +19,14 @@
 
         <com.peermountain.sdk.views.PeerMountainTextView
             android:id="@+id/tvTabGeneral"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:shadowColor="@color/pm_text_shadow"
-            android:shadowDx="3"
-            android:shadowDy="5"
-            android:shadowRadius="10"
-            android:padding="@dimen/pm_margin_normal"
-            android:text="@string/pm_tab_profile_general"
-            android:textColor="@color/pm_tab_text_color"
-            android:textSize="@dimen/pm_regular_text"/>
+            style="@style/pm_tab"
+            android:text="@string/pm_tab_profile_general"/>
 
         <com.peermountain.sdk.views.PeerMountainTextView
             android:id="@+id/tvTabSocial"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:shadowDx="3"
-            android:shadowDy="5"
-            android:shadowRadius="10"
-            android:padding="@dimen/pm_margin_normal"
+            style="@style/pm_tab"
             android:text="@string/pm_tab_profile_social"
-            android:textColor="@color/pm_tab_text_inactive"
-            android:textSize="@dimen/pm_regular_text"/>
+            android:textColor="@color/pm_tab_text_inactive"/>
     </LinearLayout>
 
     <LinearLayout
