--- a/peermountain_sdk/src/main/res/values/dimens.xml
+++ b/peermountain_sdk/src/main/res/values/dimens.xml
@@ -29,6 +29,9 @@
 
     <dimen name="pm_corners">6dp</dimen>
     <dimen name="pm_shadow">0dp</dimen>
+    <integer name="pm_tv_shadow_dx">5</integer>
+    <integer name="pm_tv_shadow_dy">5</integer>
+    <integer name="pm_tv_shadow_radius">5</integer>
     <dimen name="pm_card_border_size">0dp</dimen>
 
     <dimen name="pm_avatar_size">70dp</dimen>
@@ -40,4 +43,5 @@
     <dimen name="pm_profile_row_height">40dp</dimen>
 
     <dimen name="pm_scanned_id_image_height">130dp</dimen>
+    <dimen name="pm_qr_icon_size">300dp</dimen>
 </resources>
