--- a/peermountain_core/src/main/res/layout/activity_share_contact.xml
+++ b/peermountain_core/src/main/res/layout/activity_share_contact.xml
@@ -50,6 +50,8 @@
         android:id="@+id/etCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:gravity="center"
         android:inputType="numberSigned"
         android:hint="Contact Code Here"
