--- a/peermountain_core/src/main/res/values/colors.xml
+++ b/peermountain_core/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="pm_share_contact_bkg">#FFFFFF</color>
+    <color name="pm_share_card_bkg">#33FFFFFF</color><!--20%-->
+    <color name="pm_share_text">#FFFFFF</color><!--100%-->
+    <color name="pm_share_et_hint">#80FFFFFF</color><!--50%-->
+    <color name="pm_share_text_accent">#FF0000</color>
 </resources>
