--- a/peermountain_core/src/main/res/values/styles.xml
+++ b/peermountain_core/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">#49C5DE</item>
     </style>
 
+    <style name="pm_share_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/pm_share_text</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
