--- a/peermountain_sdk/src/main/res/values/dimens.xml
+++ b/peermountain_sdk/src/main/res/values/dimens.xml
@@ -44,4 +44,5 @@
 
     <dimen name="pm_scanned_id_image_height">130dp</dimen>
     <dimen name="pm_qr_icon_size">300dp</dimen>
+    <dimen name="pm_tuto_dot_size">10dp</dimen>
 </resources>
