--- a/peermountain_sdk/src/main/res/layout/pm_advert.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_advert.xml
@@ -10,6 +10,13 @@
     tools:background="@drawable/pm_bkg"
     tools:showIn="@layout/pm_fragment_intro">
 
+    <ImageView
+        android:layout_width="@dimen/pm_inner_icon_size"
+        android:layout_height="@dimen/pm_inner_icon_size"
+        android:layout_marginLeft="@dimen/pm_margin_normal"
+        android:padding="5dp"
+        android:src="@drawable/pm_ic_logo_white"/>
+
     <com.peermountain.sdk.views.PeerMountainTextView
         android:id="@+id/tvTutoAdTitle"
         android:layout_width="match_parent"
@@ -24,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_margin="@dimen/pm_margin_normal"
-        android:src="@drawable/cards"/>
+        android:src="@drawable/pm_cards"/>
 
     <com.peermountain.sdk.views.PeerMountainTextView
         android:id="@+id/tvTutoAdMsg"
