--- a/peermountain_sdk/src/main/res/values/styles.xml
+++ b/peermountain_sdk/src/main/res/values/styles.xml
@@ -159,4 +159,12 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:background">@drawable/pm_white_dot</item>
     </style>
+
+    <style name="pm_sonar">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:src">@drawable/pm_mark</item>
+    </style>
 </resources>
