--- a/peermountain_sdk/src/main/res/layout/pm_fragment_register_select_keywords.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_register_select_keywords.xml
@@ -47,21 +47,42 @@
             app:columnOrderPreserved="true"
             app:orientation="horizontal"
             />
+
+        <ImageView
+            android:id="@+id/ivCheck"
+            style="@style/pm_sonar"
+            tools:visibility="visible"/>
     </FrameLayout>
 
-    <com.peermountain.sdk.views.PeerMountainTextView
+    <LinearLayout
         android:id="@+id/tvSkip"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/pm_margin_normal"
+        android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:text="@string/pm_keywords_skip"
-        android:textColor="@color/pm_text_color"
-        android:textSize="@dimen/pm_regular_text"
+        android:orientation="vertical"
         android:visibility="gone"
-        tools:visibility="visible"/>
+        tools:visibility="visible">
 
-    <FrameLayout android:id="@+id/flNext"
+        <com.peermountain.sdk.views.PeerMountainTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/pm_keywords_skip"
+            android:textColor="@color/pm_text_color"
+            android:textSize="@dimen/pm_regular_text"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@color/pm_text_color"/>
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/flNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
