--- a/peermountain_sdk/src/main/res/layout/pm_fragment_scan_id.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_scan_id.xml
@@ -6,93 +6,108 @@
              tools:background="@drawable/pm_bkg"
              tools:context="com.peermountain.sdk.ui.register.ScanIdFragment">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/pm_margin_big"
-        android:layout_marginTop="@dimen/pm_margin_big"
-        android:background="@color/transparent"
-        android:padding="@dimen/pm_margin_big">
+    <!--   <FrameLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_marginBottom="@dimen/pm_margin_big"
+           android:layout_marginTop="@dimen/pm_margin_big"
+           android:background="@color/transparent"
+           android:padding="@dimen/pm_margin_big">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom|center_horizontal"
+           <FrameLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:layout_gravity="bottom|center_horizontal"
 
-            android:layout_marginLeft="@dimen/pm_margin_xbig"
-            android:layout_marginRight="@dimen/pm_margin_xbig"
-            android:layout_marginTop="@dimen/pm_margin_small"
-            android:background="@drawable/pm_card"
-            android:elevation="@dimen/pm_shadow">
+               android:layout_marginLeft="@dimen/pm_margin_xbig"
+               android:layout_marginRight="@dimen/pm_margin_xbig"
+               android:layout_marginTop="@dimen/pm_margin_small"
+               android:background="@drawable/pm_card"
+               android:elevation="@dimen/pm_shadow">
 
-        </FrameLayout>
+           </FrameLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginLeft="@dimen/pm_margin_normal"
-            android:layout_marginRight="@dimen/pm_margin_normal"
-            android:layout_marginTop="@dimen/pm_margin_big"
-            android:background="@drawable/pm_card"
-            android:elevation="@dimen/pm_shadow">
+           <FrameLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:layout_gravity="bottom|center_horizontal"
+               android:layout_marginLeft="@dimen/pm_margin_normal"
+               android:layout_marginRight="@dimen/pm_margin_normal"
+               android:layout_marginTop="@dimen/pm_margin_big"
+               android:background="@drawable/pm_card"
+               android:elevation="@dimen/pm_shadow">
 
-        </FrameLayout>
+           </FrameLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginTop="@dimen/margin_first_card"
-            android:background="@drawable/pm_card_white"
             android:elevation="@dimen/pm_shadow"
             android:orientation="vertical">
+            <!--android:layout_marginTop="@dimen/margin_first_card"           android:background="@drawable/pm_card_white"-->
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.5">
-
-                <ProgressBar android:id="@+id/pbPmProgress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:visibility="visible"/>
-
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center_horizontal|bottom"
-                    android:src="@drawable/pm_ic_id_card"/>
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:padding="@dimen/pm_margin_normal"
+                android:orientation="vertical">
 
                 <com.peermountain.sdk.views.PeerMountainTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:padding="@dimen/pm_margin_normal"
+                    android:layout_marginBottom="@dimen/pm_margin_normal"
+                    android:layout_marginTop="@dimen/pm_margin_xbig"
                     android:text="@string/pm_btn_scan_id_msg"
-                    android:textColor="@color/pm_text_color_dark"
+                    android:textColor="@color/pm_text_color"
                     android:textSize="@dimen/pm_regular_text"/>
+
+                <com.peermountain.sdk.views.PeerMountainTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/pm_btn_scan_id_msg2"
+                    android:textColor="@color/pm_text_color"
+                    android:textSize="@dimen/pm_regular_text"/>
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <ProgressBar android:id="@+id/pbPmProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
+
+                <ImageView
+                    android:layout_width="75dp"
+                    android:layout_height="45dp"
+                    android:layout_gravity="center_horizontal|top"
+                    android:src="@drawable/pm_id_card_white"/>
+
+
+                <com.peermountain.sdk.views.PeerMountainTextView
+                    android:id="@+id/pmTvLoading"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_gravity="bottom"
+                    android:padding="@dimen/pm_margin_normal"
+                    android:text="@string/pm_lbl_loading_sdk"
+                    android:textColor="@color/pm_text_color"
+                    android:textSize="@dimen/pm_regular_text"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
             </FrameLayout>
 
-            <com.peermountain.sdk.views.PeerMountainTextView
-                android:id="@+id/pmTvLoading"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="@dimen/pm_margin_normal"
-                android:text="@string/pm_lbl_loading_sdk"
-                android:textColor="@color/pm_text_accent"
-                android:textSize="@dimen/pm_regular_text"
-                android:visibility="gone"
-                tools:visibility="visible"/>
+
             <ImageView
                 android:id="@+id/pmIvNext"
                 style="@style/pm_square_btn"
@@ -101,6 +116,6 @@
         </LinearLayout>
 
 
-    </FrameLayout>
+    <!--</FrameLayout>-->
 
 </FrameLayout>
