--- a/peermountain_sdk/src/main/res/layout/pm_keyword_view.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_keyword_view.xml
@@ -4,7 +4,8 @@
     xmlns:grid="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="70dp"
-    android:layout_height="wrap_content"
+    android:layout_height="30dp"
+    android:layout_gravity="center"
     android:gravity="center"
     android:layout_margin="@dimen/pm_margin_micro"
     android:background="@drawable/pm_keywords_selector"
