--- a/peermountain_sdk/src/main/res/layout/pm_advert.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_advert.xml
@@ -28,8 +28,8 @@
         android:textSize="30sp"/>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/pm_margin_normal"
         android:src="@drawable/pm_cards"/>
 
