--- a/peermountain_sdk/src/main/res/layout/pm_fragment_intro.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_intro.xml
@@ -23,7 +23,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 style="@style/pm_tuto_image"
-                android:src="@drawable/pm_ic_logo"/>
+                app:srcCompat="@drawable/pm_ic_tuto1"/>
 
 
             <ImageView
