Register flow - added ad text + 1 tuto image, 1 left

--- a/peermountain_sdk/src/main/res/layout/pm_fragment_intro.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_intro.xml
@@ -29,7 +29,7 @@
             <ImageView
                 android:id="@+id/imageView2"
                 style="@style/pm_tuto_image"
-                android:src="@drawable/pm_ic_logo"/>
+                app:srcCompat="@drawable/pm_ic_tuto2"/>
 
             <ImageView
                 android:id="@+id/imageView3"
