--- a/peermountain_sdk/src/main/res/layout/pm_advert.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_advert.xml
@@ -21,6 +21,7 @@
         android:id="@+id/tvTutoAdTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/pm_tv_shadow"
         android:layout_margin="@dimen/pm_margin_normal"
         android:gravity="left"
         android:text="@string/pm_ad_title"
@@ -37,6 +38,7 @@
         android:id="@+id/tvTutoAdMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/pm_tv_shadow"
         android:layout_margin="@dimen/pm_margin_normal"
         android:gravity="left"
         android:text="@string/pm_ad_msg"
