--- a/peermountain_core/src/main/res/values/colors.xml
+++ b/peermountain_core/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="pm_share_card_bkg">#33FFFFFF</color><!--20%-->
     <color name="pm_share_text">#FFFFFF</color><!--100%-->
     <color name="pm_share_et_hint">#80FFFFFF</color><!--50%-->
-    <color name="pm_share_text_accent">#FF0000</color>
+    <color name="pm_share_text_accent">#49C5DE</color>
 </resources>
